--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npx tsc",
     "start": "npx tsc && node dist/src/app.js",
     "dev": "npx ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "prod": "tsc -p tsconfig_prod.json && pm2 restart ecosystem.config.js --env production"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pm2": "^5.4.2",
     "superset": "^2.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
