--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "horizonhub-server",
+  "name": "guide-tube-backend",
   "version": "1.0.0",
   "description": "",
   "main": "app.ts",
