fixed bug in user profile image saving

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REFRESH_TOKEN_SECRET=32bb06efbfe7c62653790f92054962dc4669c52e9ad0a10ee357d03b553
 JWT_TOKEN_EXPIRATION=1h
 MONGO_URI=mongodb+srv://user:6r05oqyPbkLNBUnX@cluster0.ru6kdim.mongodb.net/
 PORT=3001
+SERVER_URL=http://localhost:3001
