--- a/.envprod
+++ b/.envprod
@@ -3,3 +3,4 @@ REFRESH_TOKEN_SECRET=32bb06efbfe7c62653790f92054962dc4669c52e9ad0a10ee357d03b553
 JWT_TOKEN_EXPIRATION=1h
 PORT=3001
 NODE_ENV=production
+SERVER_URL=https://guidetube.cs.colman.ac.il:4000
